istio-tutorial/echoserver-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-demo-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver
      version: v2
  template:
    metadata:
      labels:
        app: echoserver
        version: v2
    spec:
      containers:
      - name: echoserver-demo-app-v2
        image: imeshai/echoserver
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
