istio-tutorial/echoserver-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-demo-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver
      version: v1
  template:
    metadata:
      labels:
        app: echoserver
        version: v1
    spec:
      containers:
      - name: echoserver-demo-app-v1
        image: imeshai/echoserver
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
spec:
  selector:
    app: echoserver
  ports:
  - port: 80
    targetPort: 80
    name: http
